# podcast-agent

./: .env.example  .gitignore  LICENSE  pyproject.toml  requirements.txt
.cursor/rules/: git_workflow.mdc  project_overview.mdc  python.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: PRD_Uutisagentti.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  task_026.txt  task_027.txt  task_028.txt  task_029.txt  task_030.txt  tasks.json
config/: sources.yaml
docs/: DEPLOYMENT.md  README.md  TROUBLESHOOTING.md
git-infra/: .gitattributes
git-infra/.github/: CODEOWNERS
k8s/: cronjob.yaml
src/: __init__.py  main.py  orchestrator.py
src/analysis/: __init__.py  article_grouper.py  category_selector.py  duplicate_tracker.py  monthly_archive.py  monthly_data.py  monthly_gate.py  prioritize.py  prioritizer.py  priority_analyzer.py  quota_redistributor.py
src/fetchers/: __init__.py  http.py  rss.py
src/models/: __init__.py  article.py  source.py
src/output/: github_client.py  issue_creator.py  issue_formatter.py  pipeline_reporter.py
terraform/: cronjob.tf  main.tf  outputs.tf  pvc.tf  versions.tf
(+20 files in other folders)
